--- a/package.json
+++ b/package.json
@@ -21,13 +21,11 @@
   "engines": {
     "node": ">=12.0"
   },
-  "bin": {
-    "globfs": "cli.js"
+  "bin": {   
   },
   "dependencies": {
     "commander": "^3.0.1",
-    "fs-extra": "^8.1.x",
-    "glob": "^7.1.x"
+    "fs-extra": "^8.1.x"
   },
   "devDependencies": {
     "eslint": "^6.3.x",
