--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "url": "https://github.com/scha-chan/github-package.git"
   },
   "scripts": {
-      "setup-test": "cd test && npm run setup",
-      "test": "cd test && npm run test",
+     // "setup-test": "cd test && npm run setup",
+     // "test": "cd test && npm run test",
       "lint": "eslint index.js cli.js",
       "trypublish": "npm publish || true"
   },
